# legion

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  legion.py  pyproject.toml
src/legion/: __init__.py  __main__.py  about.py  legion.py
tests/: conftest.py  helpers.py  test_docs.py  test_ensure_utf8_output.py  test_excepthook.py  test_format_message.py  test_format_oserror.py  test_generate_metadata_file.py  test_get_credentials.py  test_get_desktop_path.py  test_get_project_metadata.py  test_get_version_metadata.py  test_git_repository_root.py  test_load_pyproject.py  test_logging.py  test_metadata.py  test_munge_oserror.py  test_platform.py  test_resolve_metadata.py  test_resolve_version.py  test_run.py  test_timestamp.py  test_wait_for_keypress.py
tools/: colophon.py  generate_metadata.py  pluck.py  update_about.py  update_venv.py
tools/hooks/: common  post-checkout  post-commit  post-merge  pre-commit
