[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools==80.9.0",
    "versioningit==3.3.0"
]

[dependency-groups]
dev = [
    {include-group="tests"},
    {include-group="lint"},
]
tests = [
    "pytest==9.0.2",
]
lint = [
    "pylint",
    "vulture",
    "ruff",
]

[project]
name = "legion"
dynamic = ["version"]
description = "Miscellaneous utilities for Python projects"
readme = "README.md"
requires-python = ">= 3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name="Raúl Núñez de Arenas Coronado", email="raulnac@gmail.com"}]
maintainers = [{name="Raúl Núñez de Arenas Coronado", email="raulnac@gmail.com"}]
scripts = {"legion" = "legion:demo"}

[project.urls]
source = "https://github.com/DervishD/legion"
issues = "https://github.com/DervishD/legion/issues"
changelog = "https://github.com/DervishD/legion/CHANGELOG.md"

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
dirty = "{base_version}+{rev}.dirty"
distance = "{next_version}.dev{distance}+{rev}"
distance-dirty = "{next_version}.dev{distance}+{rev}.dirty"