[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools==80.9.0",
    "versioningit==3.3.0"
]

[dependency-groups]
dev = [
    {include-group="tests"},
    {include-group="lint"},
]
tests = [
    "pytest==9.0.2",
]
lint = [
    "pylint",
    "pylint-pytest",
    "vulture",
    "ruff",
]

[project]
name = "legion"
dynamic = ["version"]
description = "Miscellaneous utilities for Python projects"
readme = "README.md"
requires-python = ">= 3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name="Raúl Núñez de Arenas Coronado", email="raulnac@gmail.com"}]
maintainers = [{name="Raúl Núñez de Arenas Coronado", email="raulnac@gmail.com"}]
scripts = {"legion" = "legion:demo"}

[project.urls]
source = "https://github.com/DervishD/legion"
issues = "https://github.com/DervishD/legion/issues"
changelog = "https://github.com/DervishD/legion/CHANGELOG.md"

[tool.versioningit.format]
dirty = "{base_version}+{branch}.{rev}.dirty"
distance = "{base_version}.post{distance}+{branch}.{rev}"
distance-dirty = "{base_version}.post{distance}+{branch}.{rev}.dirty"