[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools==80.9.0",
    "versioningit==3.3.0"
]

[dependency-groups]
dev = [
    {include-group="tests"},
    {include-group="lint"},
]
tests = [
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
]
lint = [
    "pylint",
    "vulture",
    "ruff",
]

[project]
name = "legion"
dynamic = ["version"]
description = "Miscellaneous utilities for Python projects"
readme = "README.md"
requires-python = ">= 3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name="Raúl Núñez de Arenas Coronado", email="raulnac@gmail.com"}]
maintainers = [{name="Raúl Núñez de Arenas Coronado", email="raulnac@gmail.com"}]
scripts = {"legion" = "legion:demo"}

[project.urls]
source = "https://github.com/DervishD/legion"
issues = "https://github.com/DervishD/legion/issues"
changelog = "https://github.com/DervishD/legion/CHANGELOG.md"

[tool.pytest]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
order-by-type = false

[tool.pylint.main]
init-hook = "import sys, os; sys.path.insert(0, os.path.abspath('src'))"
persistent = false
jobs = 0
max-line-length = 120
enable = "all"
disable = ["I", "too-many-lines", "too-few-public-methods"]
allow-global-unused-variables = false

[tool.versioningit.format]
dirty = "{base_version}+{branch}.{rev}.dirty"
distance = "{base_version}.post{distance}+{branch}.{rev}"
distance-dirty = "{base_version}.post{distance}+{branch}.{rev}.dirty"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
format = "markdown"
precision = 2